--- a/src/modules/Assignment2/index.css
+++ b/src/modules/Assignment2/index.css
@@ -95,7 +95,9 @@ height: 130px;
   height: 20px;
   font-size: 13px;
   padding: 10px;
+  border-radius: 0px 0px 15px 15px;
 }
 .footer p{
   margin-top: 0px;
+  padding-bottom: 40px;
 }
