--- a/src/modules/Asignment3/index.css
+++ b/src/modules/Asignment3/index.css
@@ -1,17 +1,27 @@
-/* @import url("../../fonts/AkkuratPro/AkkuratPro-Bold.otf"); */
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Roboto&family=Rubik&display=swap");
 .container {
-  /* width: 1600px;
-    height: 5175px; */
-  padding-left: 20px;
-  background-color: #ffffff;
   font-family: "AkkuratPro-Bold";
-  background-color: #f6fcff;
+  background: linear-gradient(
+    196deg,
+    #f6fcff,
+    #ffffff,
+    #ffffff,
+    #f6fcff,
+    #ffffff,
+    #ffffff,
+    #f6fcff,
+    #ffffff,
+    #ffffff
+  );
 }
 ui {
   list-style: none;
   display: inline-flex;
 }
-ui li {
+.footerHeading {
+  color: #000000 !important;
+}
+.nav ui li {
   margin-right: 40px;
   color: #3a4e6f;
   cursor: pointer;
@@ -81,6 +91,7 @@ ui li {
   background-color: rgba(33, 41, 64, 0);
   margin-top: 60px;
   margin-left: 30px;
+  margin-bottom: 500px;
 }
 .text {
   width: 600px;
@@ -289,7 +300,7 @@ hr {
   color: #637696;
   margin-top: 0px;
 }
-.textSpendingDogecoin{
+.textSpendingDogecoin {
   padding-top: 100px;
   padding-left: 200px;
 }
@@ -298,7 +309,7 @@ hr {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.textSpendingDogecoin h2{
+.textSpendingDogecoin h2 {
   width: 656px;
   height: 47px;
   margin: 0 140px 20px 111px;
@@ -312,24 +323,209 @@ hr {
   text-align: center;
   color: #000808;
 }
-.textSpendingDogecoin p{
-    width: 856px;
-    height: 63px;
-    margin: 20px 40.5px 67px 10.5px;
-    font-family: NunitoSans;
-    font-size: 20px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.8;
-    letter-spacing: normal;
-    text-align: center;
-    color: #637696;
-    margin-bottom: 50px;
+.textSpendingDogecoin p {
+  width: 856px;
+  height: 63px;
+  margin: 20px 40.5px 67px 10.5px;
+  font-family: NunitoSans;
+  font-size: 20px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.8;
+  letter-spacing: normal;
+  text-align: center;
+  color: #637696;
+  margin-bottom: 50px;
 }
-.spendingDogeCoin{
+
+.spendingDogeCoin {
   display: flex;
   padding-left: 160px;
 }
+.footer {
+  height: 300px;
+  width: 100%;
+  display: -webkit-inline-box;
+}
+.footerImage {
+  display: inline-grid;
+  width: 700px;
+}
+.footer img {
+  margin-bottom: 40px;
+  margin-left: 100px;
+  margin-top: 20px;
+}
+.footerBar ui li {
+  margin-left: 100px;
+  width: 100px;
+  margin-right: 50px;
+  margin-top: 20px;
+  margin-right: 100px;
+  color: #3a4e6f;
+  cursor: pointer;
+  margin: 0px 2rem 0px 2rem;
+  font-size: 12px;
+  transition: all 0.3s ease;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: bold;
+  line-height: 3.67;
+  letter-spacing: 0px;
+}
+.footerBar {
+  width: 540px;
+  height: 200px;
+  padding-left: 30px;
+}
+.footerBottom {
+  width: 700px;
+  color: #3a4e6f;
+  font-size: 12px;
+  transition: all 0.3s ease;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: bold;
+  line-height: 1.67;
+  letter-spacing: 0px;
+  margin-left: 100px;
+}
+.footerImage ui li {
+  margin-right: 30px;
+  width: 120px;
+}
 
+/* ******************8    */
+.cardSmall {
+  border-radius: 20.5px;
+  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(99, 118, 150, 0.2);
+  background-color: #fff6f6;
+  position: absolute;
+  left: 180px;
+  top: 600px;
+  padding: 20px;
+  width: 280.6px;
+  height: 159.4px;
+}
+.cardMed {
+  position: absolute;
+  top: 630px;
+  left: 420px;
+  background-color: #f6fcff;
+  width: 281.2px;
+  height: 153.4px;
+  padding: 25.6px 40.1px 34.5px 36.3px;
+  border-radius: 20.5px;
+  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(99, 118, 150, 0.2);
+}
+.TextDiv {
+  border-radius: 20.5px;
+  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(99, 118, 150, 0.2);
+  padding: 40px 49px 40.4px 41.6px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 670px;
+  left: 680px;
+  width: 309.6px;
+  height: 145.4px;
+}
+.imgcreditClass {
+  width: 70px;
+  height: 50px;
+}
+.imgcreditClass2 {
+  width: 80px;
+  height: 40px;
+}
+.hrClass {
+  width: 6px;
+  height: 6px;
+  margin: 0 6px 0 7px;
+  color: #637696;
+}
+.cardNameDiv {
+  width: 100px;
+}
+.dateDiv {
+  width: 100px;
 
+  margin-left: 80px;
+}
+.cardTextDiv {
+  display: flex;
+}
+.cardholder,
+.expdate {
+  margin-bottom: 0px;
+  width: 74px;
+  margin: 50px 0px 0 0;
+  font-family: NunitoSans;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 2.57;
+  color: #637696;
+}
+.cardholder2,
+.expdate2 {
+  margin-bottom: 0px;
+  width: 74px;
+  margin: 50px 0px 0 0;
+  font-family: NunitoSans;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 2.57;
+  color: #637696;
+}
+.cardholdername2,
+.date2 {
+  margin-bottom: 0px;
+  width: 74px;
+  font-family: NunitoSans;
+  font-size: 14px;
+  font-weight: 300;
+  margin-top: 0px;
+  color: #637696;
+}
+.cardholdername,
+.date {
+  margin-bottom: 0px;
+  width: 74px;
+  font-family: NunitoSans;
+  font-size: 12px;
+  font-weight: 300;
+  margin-top: 0px;
+  color: #637696;
+}
+.TextDiv h2 {
+  width: 393px;
+  height: 100px;
+  margin: 0 16px 32px 0;
+  font-family: Rubik;
+  font-size: 30px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000808;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.TextDiv p {
+  width: 330px;
+  height: 63px;
+  font-family: NunitoSans;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.8;
+  letter-spacing: normal;
+  text-align: left;
+  color: #637696;
+  margin-top: 0px;
+}
