--- a/src/modules/Asignment3/index.css
+++ b/src/modules/Asignment3/index.css
@@ -23,7 +23,7 @@ ui {
 }
 .nav ui li {
   margin-right: 40px;
-  color: #3a4e6f;
+  color: #637696;
   cursor: pointer;
   margin: 0px 2rem 0px 2rem;
   font-size: 12px;
@@ -33,29 +33,36 @@ ui {
   line-height: 1.67;
   letter-spacing: 0px;
 }
-/* .nav select{
-    margin-right: 30px;
-    margin-left: 30px;
-        font: inherit;
-    color: currentColor;
-    width: 100%;
-    border: 0;
-    height: 1.1876em;
-    margin: 0;    padding: 6px 0 7px;
-    min-width: 0;
-    background: none;
-    box-sizing: content-box;
-    animation-name: mui-auto-fill-cancel;
-    letter-spacing: inherit;
-    animation-duration: 10ms;
-    -webkit-tap-highlight-color: transparent;
-}  */
+.nav select {
+  color: currentColor;
+  border: 0;
+  height: 1.1876em;
+  margin: 0;
+  padding: 6px 0 7px;
+  min-width: 0;
+  background: none;
+  box-sizing: content-box;
+  animation-name: mui-auto-fill-cancel;
+  letter-spacing: inherit;
+  animation-duration: 10ms;
+  -webkit-tap-highlight-color: transparent;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  color: #637696;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1.67;
+  margin-left: 5px;
+}
+.nav select:focus-visible {
+  outline: none;
+}
+
 .nav {
   padding-top: 30px;
 }
 .nav img {
   margin-left: 35px;
-  margin-right: 160px;
+  margin-right: 200px;
 }
 .nav button {
   margin-left: 30px;
@@ -118,8 +125,31 @@ ui {
   background-color: none;
   margin-top: 20px;
   margin-right: 22px;
+  color: currentColor;
+  border: 0;
+  height: 1.1876em;
+  margin: 0;
+  padding: 6px 0 7px;
+  background: none;
+  box-sizing: content-box;
+  animation-name: mui-auto-fill-cancel;
+  letter-spacing: inherit;
+  animation-duration: 10ms;
+  -webkit-tap-highlight-color: transparent;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  color: #637696;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1.67;
+  margin-left: 5px;
+  height: 70px;
+  line-height: 1.67;
+  margin-left: 5px;
+  width: 70px;
 }
-
+.card select:focus-visible {
+  outline: none;
+}
 .card input {
   float: left;
   font: inherit;
@@ -171,6 +201,7 @@ ui {
   line-height: 1.33;
   margin-bottom: 20px !important;
   letter-spacing: normal;
+  font-family: Rubik;
 }
 .text h2 {
   width: 518px;
@@ -199,12 +230,161 @@ ui {
   letter-spacing: normal;
   text-align: left;
   color: #637696;
+  font-family: NunitoSans;
 }
-hr {
+/* ******************8    */
+.cardSmall {
+  border-radius: 20.5px;
+  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(99, 118, 150, 0.2);
+  background-color: #fff6f6;
+  position: absolute;
+  left: 180px;
+  top: 600px;
+  padding: 20px;
+  width: 280.6px;
+  height: 159.4px;
+}
+.cardMed {
+  position: absolute;
+  top: 630px;
+  left: 415px;
+  background-color: #f6fcff;
+  width: 281.2px;
+  height: 153.4px;
+  padding: 25.6px 40.1px 34.5px 36.3px;
+  border-radius: 20.5px;
+  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(99, 118, 150, 0.2);
+}
+.TextDiv {
+  border-radius: 20.5px;
+  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(99, 118, 150, 0.2);
+  padding: 40px 56px 40.4px 36.6px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 670px;
+  left: 689px;
+  width: 309.6px;
+  height: 145.4px;
+}
+.imgcreditClass {
+  width: 70px;
+  height: 50px;
+}
+.imgcreditClass2 {
+  width: 80px;
+  height: 40px;
+}
+
+.cardNameDiv {
+  width: 100px;
+}
+.dateDiv {
+  width: 100px;
+
+  margin-left: 80px;
+}
+.dots {
+  display: flex;
+  display: flex;
+  height: 20px;
+  position: absolute;
+  bottom: 94px;
+  width: 80%;
+}
+.cardTextDiv {
+  display: flex;
+  position: absolute;
+  bottom: 20px;
+}
+.cardholder,
+.expdate {
+  margin-bottom: 0px;
+  width: 74px;
+  margin: 50px 0px 0 0;
+  font-family: NunitoSans;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 2.57;
+  color: #637696;
+  font-family: NunitoSans;
+}
+.cardholder2,
+.expdate2 {
+  margin-bottom: 0px;
+  width: 74px;
+  margin: 50px 0px 0 0;
+  font-family: NunitoSans;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 2.57;
+  color: #637696;
+  font-family: NunitoSans;
+}
+.cardholdername2,
+.date2 {
+  margin-bottom: 0px;
+  width: 74px;
+  font-family: NunitoSans;
+  font-size: 14px;
+  font-weight: 300;
+  margin-top: 0px;
+  color: #637696;
+  font-family: NunitoSans;
+}
+.cardholdername,
+.date {
+  margin-bottom: 0px;
+  width: 74px;
+  font-family: NunitoSans;
+  font-size: 12px;
+  font-weight: 300;
+  margin-top: 0px;
+  color: #637696;
+  font-family: NunitoSans;
+}
+.TextDiv h2 {
+  width: 393px;
+  height: 100px;
+  margin: 0 16px 32px 0;
+  font-family: Rubik;
+  font-size: 30px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000808;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.TextDiv p {
+  width: 330px;
+  height: 63px;
+  font-family: NunitoSans;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.8;
+  letter-spacing: normal;
+  text-align: left;
+  color: #637696;
+  margin-top: 0px;
+}
+.dotsClass {
   width: 100%;
-  height: 1px;
-  opacity: 0.25;
-  background-color: #3a4e6f;
+  font-size: 25px;
+  color: #3a4e6f;
+}
+.dotClass{
+  width: 100%;
+  font-size: 20px;
+  color: #3a4e6f;
 }
 .buydoge {
   color: white;
@@ -213,7 +393,7 @@ hr {
   z-index: 999;
   font-size: 18px;
   box-shadow: 0 2px 4px 0 rgb(103 194 6 / 30%);
-  font-family: Nunito Sans, sans-serif;
+  font-family: Rubik;
   font-weight: bold;
   border-style: hidden;
   border-radius: 32px;
@@ -248,7 +428,7 @@ hr {
   z-index: 999;
   font-size: 18px;
   box-shadow: 0 2px 4px 0 rgb(103 194 6 / 30%);
-  font-family: Nunito Sans, sans-serif;
+  font-family: Rubik;
   font-weight: bold;
   border-style: hidden;
   border-radius: 32px;
@@ -263,7 +443,7 @@ hr {
   z-index: 999;
   font-size: 18px;
   box-shadow: 0 2px 4px 0 rgb(103 194 6 / 30%);
-  font-family: Nunito Sans, sans-serif;
+  font-family: Rubik;
   font-weight: bold;
   border-style: hidden;
   border-radius: 32px;
@@ -282,7 +462,7 @@ hr {
   width: 1170px;
 }
 .text_whatisdogecoin {
-  font-family: NunitoSans;
+  font-family: Rubik;
   font-size: 20px;
   line-height: 1.8;
   text-align: center;
@@ -368,7 +548,7 @@ hr {
   margin: 0px 2rem 0px 2rem;
   font-size: 12px;
   transition: all 0.3s ease;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: Rubik;
   font-weight: bold;
   line-height: 3.67;
   letter-spacing: 0px;
@@ -388,144 +568,27 @@ hr {
   line-height: 1.67;
   letter-spacing: 0px;
   margin-left: 100px;
+  font-family: Rubik;
 }
 .footerImage ui li {
   margin-right: 30px;
   width: 120px;
 }
 
-/* ******************8    */
-.cardSmall {
-  border-radius: 20.5px;
-  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
-  border: solid 1px rgba(99, 118, 150, 0.2);
-  background-color: #fff6f6;
-  position: absolute;
-  left: 180px;
-  top: 600px;
-  padding: 20px;
-  width: 280.6px;
-  height: 159.4px;
-}
-.cardMed {
-  position: absolute;
-  top: 630px;
-  left: 420px;
-  background-color: #f6fcff;
-  width: 281.2px;
-  height: 153.4px;
-  padding: 25.6px 40.1px 34.5px 36.3px;
-  border-radius: 20.5px;
-  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
-  border: solid 1px rgba(99, 118, 150, 0.2);
-}
-.TextDiv {
-  border-radius: 20.5px;
-  box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.05);
-  border: solid 1px rgba(99, 118, 150, 0.2);
-  padding: 40px 49px 40.4px 41.6px;
-  background-color: #ffffff;
-  position: absolute;
-  top: 670px;
-  left: 680px;
-  width: 309.6px;
-  height: 145.4px;
-}
-.imgcreditClass {
-  width: 70px;
-  height: 50px;
-}
-.imgcreditClass2 {
-  width: 80px;
-  height: 40px;
-}
-.hrClass {
-  width: 6px;
-  height: 6px;
-  margin: 0 6px 0 7px;
-  color: #637696;
-}
-.cardNameDiv {
-  width: 100px;
-}
-.dateDiv {
-  width: 100px;
 
-  margin-left: 80px;
+.picss{
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin-left: 30px;
+  margin-right: 30px;
+  border:1px solid rgba(99, 118, 150, 0.4);
 }
-.cardTextDiv {
-  display: flex;
-}
-.cardholder,
-.expdate {
-  margin-bottom: 0px;
-  width: 74px;
-  margin: 50px 0px 0 0;
-  font-family: NunitoSans;
-  font-size: 12px;
-  font-weight: 300;
-  line-height: 2.57;
-  color: #637696;
-}
-.cardholder2,
-.expdate2 {
-  margin-bottom: 0px;
-  width: 74px;
-  margin: 50px 0px 0 0;
-  font-family: NunitoSans;
-  font-size: 14px;
-  font-weight: 300;
-  line-height: 2.57;
-  color: #637696;
-}
-.cardholdername2,
-.date2 {
-  margin-bottom: 0px;
-  width: 74px;
-  font-family: NunitoSans;
-  font-size: 14px;
-  font-weight: 300;
-  margin-top: 0px;
-  color: #637696;
-}
-.cardholdername,
-.date {
-  margin-bottom: 0px;
-  width: 74px;
-  font-family: NunitoSans;
-  font-size: 12px;
-  font-weight: 300;
-  margin-top: 0px;
-  color: #637696;
-}
-.TextDiv h2 {
-  width: 393px;
-  height: 100px;
-  margin: 0 16px 32px 0;
-  font-family: Rubik;
-  font-size: 30px;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.25;
-  letter-spacing: normal;
-  text-align: left;
-  color: #000808;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.TextDiv p {
-  width: 330px;
-  height: 63px;
-  font-family: NunitoSans;
-  font-size: 15px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.8;
-  letter-spacing: normal;
-  text-align: left;
-  color: #637696;
-  margin-top: 0px;
+.pics{
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin-left: 30px;
+  margin-right: 30px;
+  
 }
