--- a/src/modules/Assignment9/index.css
+++ b/src/modules/Assignment9/index.css
@@ -10,7 +10,7 @@ height: 300px;
 
 }
 .form{
-    margin-top: 100px;
+    margin-top: 200px;
     MARGIN-LEFT: 250PX;
   
 }
@@ -18,6 +18,11 @@ height: 300px;
 width: 200px;
 height: 50px;
 border-radius: 10px;
+
+}
+.name{
+    margin-left: 30px;
+   
 
 }
 .form input:focus-visible{
@@ -31,4 +36,7 @@ border-radius: 10px;
     margin-top: 80px;
     border-radius: 10px;
  
+}
+.subDiv{
+display: flex;
 }
