--- a/src/modules/Assignment10/index.css
+++ b/src/modules/Assignment10/index.css
@@ -28,3 +28,26 @@ border-radius: 10px;
 .subDiv{
 display: flex;
 }
+/* .mainCard{
+    display: flex;
+} */
+.usersDiv{
+    display: inline-flex;
+    width: 300px;
+    height: 400px;
+}
+.usersDiv img{
+    width: 250px;
+    height: 300px;
+}
+.btn{
+    position: absolute;
+    right: 150px;
+}
+.buttonClass{
+    width: 100px;
+    height: 50px;
+    /* position: absolute;
+    right: 600px;
+    top: 50px; */
+}
